--- a/.github/workflows/update_playlist.yml
+++ b/.github/workflows/update_playlist.yml
@@ -36,4 +36,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git add playlist.m3u
           git commit -m "Actualización automática: $(date '+%Y-%m-%d %H:%M:%S')"
+          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
           git push
