--- a/.github/workflows/update_playlist.yml
+++ b/.github/workflows/update_playlist.yml
@@ -1,15 +1,24 @@
 name: Actualizar Playlist M3U
 on:
   schedule:
-    - cron: '0 * * * *'  # Ejecutar cada hora (UTC)
-  workflow_dispatch:      # Permite ejecución manual
+    - cron: '0 * * * *'   # Ejecutar cada hora (UTC)
+  workflow_dispatch:      # También permite ejecución manual
+
+# 🔑 Concede permiso de escritura al token interno
+permissions:
+  contents: write
 
 jobs:
   update:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Instalar dependencias del sistema
         run: |
@@ -31,10 +40,12 @@ jobs:
           python3 generar_playlist.py
 
       - name: Subir cambios
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add playlist.m3u
-          git commit -m "Actualización automática: $(date '+%Y-%m-%d %H:%M:%S')"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }}.git
-          git push
+          # Solo hace commit si hay cambios
+          git diff --cached --quiet || git commit -m "Actualización automática: $(date '+%Y-%m-%d %H:%M:%S')"
+          git push origin HEAD:main
