--- a/.github/workflows/update_playlist.yml
+++ b/.github/workflows/update_playlist.yml
@@ -5,7 +5,6 @@ on:
     - cron: '0 * * * *'   # Cada hora (UTC)
   workflow_dispatch:      # Permite ejecución manual
 
-# 🔑 Dar permiso de escritura al GITHUB_TOKEN
 permissions:
   contents: write
 
@@ -26,6 +25,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
 
+      - name: Linkear chromium-browser como google-chrome
+        run: |
+          sudo ln -sf /usr/bin/chromium-browser /usr/bin/google-chrome
+
       - name: Configurar Python 3.10
         uses: actions/setup-python@v4
         with:
@@ -33,12 +36,13 @@ jobs:
 
       - name: Instalar dependencias Python
         run: |
-          # Forzamos blinker<1.8.0 para que selenium-wire encuentre blinker._saferef
+          # Forzamos blinker<1.8.0 para selenium-wire
           pip install "blinker<1.8.0" selenium-wire
 
       - name: Ejecutar script de extracción
         run: |
-          export PATH=$PATH:/usr/bin/chromium-browser
+          # Asegura que el PATH incluye el Chromium instalado
+          export PATH=$PATH:/usr/bin
           python3 generar_playlist.py
 
       - name: Subir cambios
